--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
-    "sequelize": "^6.37.7"
+    "request-ip": "^3.3.0",
+    "sequelize": "^6.37.7",
+    "ua-parser-js": "^2.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
