--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "request-ip": "^3.3.0",
     "sequelize": "^6.37.7",
